--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/logo (1).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Byte-Blaze</title>
+    <title>Tech-Blog</title>
   </head>
   <body>
     <div id="root"></div>
